--- a/lib/Input/_input.scss
+++ b/lib/Input/_input.scss
@@ -2,6 +2,36 @@
 .swf-form-group {
   width: 100%;
   position: relative;
+  background-color: #fff;
+  border: 1px solid #becad6;
+  font-weight: 300;
+  will-change: border-color, box-shadow;
+  border-radius: 0.375rem;
+  box-shadow: none;
+  transition: box-shadow 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06), border 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06);
+  -webkit-appearance: none;
+
+
+
+  &.--focused {
+    color: #495057;
+    background-color: #fff;
+    border-color: #007bff;
+    box-shadow: 0 0.313rem 0.719rem rgba(0, 123, 255, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
+  }
+
+  &.--invalid {
+    border-color: red;
+    box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
+  }
+
+  &.--readonly {
+    box-shadow: none;
+    cursor: default;
+    background: rgb(228, 230, 231);
+    outline: none;
+  }
+
 
 
   .inp-label {
@@ -15,31 +45,27 @@
     z-index: 1;
     background: #fff;
     transform: translate(14px, -12px) scale(0.75);
-    padding: 0;
     transition: color 0.2s cubic-bezier(0, 0, 0.2, 1) 0ms, transform 0.2s cubic-bezier(0, 0, 0.2, 1) 0ms;
     margin: 0;
+    padding: 1px;
+
+    &.--focused {
+      color: #007bff;
+    }
+
+    &.--invalid {
+      color: red;
+    }
+
+    &.--readonly {
+      background: linear-gradient(transparent 22%, #e4e6e7 70%)
+    }
+
   }
 
-
-  label.--focused {
-    color: #007bff;
-  }
-
-  label.--readonly {
-    color: #BDBDBD;
-  }
-
-  label.--invalid {
-    color: red;
-  }
-
-  label {
-    padding-right: 3px;
-  }
 
   .inp-required {
     transform: translateY(-50%);
-
   }
 
 
@@ -62,7 +88,6 @@
 
   .form-control--start,
   .form-control--end {
-    border: 1px solid #becad6;
     text-align: center;
     display: flex;
     align-items: center;
@@ -73,52 +98,6 @@
     color: #212529;
     white-space: nowrap;
 
-    &.--invalid {
-      border-color: red;
-    }
-  }
-
-  .form-control--start {
-    border-right: none;
-    border-top-left-radius: 0.375rem;
-    border-bottom-left-radius: 0.375rem;
-  }
-
-  .form-control--end {
-    border-left: none;
-    border-top-right-radius: 0.375rem;
-    border-bottom-right-radius: 0.375rem;
-
-  }
-
-
-  .form-control.no-start-border {
-    border-left: none;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-  }
-
-  .form-control.no-end-border {
-    border-right: none;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-  }
-
-
-  .form-control.--invalid {
-    border-color: red;
-    //  box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
-  }
-
-  .form-control.no-start-border:focus,
-  .form-control.no-end-border:focus {
-    box-shadow: none;
-    border-color: #becad6;
-    outline: none;
-  }
-
-  .form-control:hover {
-    border-color: #8fa4b8;
   }
 
   .form-control {
@@ -130,71 +109,45 @@
     line-height: 1.5;
     margin: 0;
     color: #495057;
-    background-color: #fff;
-    border: 1px solid #becad6;
-    font-weight: 300;
-    will-change: border-color, box-shadow;
-    border-radius: 0.375rem;
-    box-shadow: none;
-    transition: box-shadow 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06), border 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06);
-    -webkit-appearance: none;
+    border: none;
+    border-radius: 0.38rem;
 
-    .form-control:read-only {
-      background: #5a6169;
-    }
-
-    .--invalid {
-      border-color: red;
-      // box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
-    }
-
-    &.--readonly {
-      border-color: #a5a5a5;
-      color: #a5a5a5;
+    &.--readonly{
       cursor: default;
+      background: rgb(228, 230, 231);
     }
   }
 
-  .form-control:focus {
+  .form-control:focus,
+  .form-control:hover {
     outline: none;
+  }
+
+}
+
+.swf-form-group:hover{
+  border: 1px solid #8fa4b8;
+  outline: none;
+
+  &.--focused {
     color: #495057;
     background-color: #fff;
     border-color: #007bff;
     box-shadow: 0 0.313rem 0.719rem rgba(0, 123, 255, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
-
-    &.--invalid {
-      border-color: red;
-      // box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
-    }
-
-
-    &.--readonly {
-      //border-color: #a5a5a5;
-      // color: #a5a5a5;
-      box-shadow: none;
-      cursor: default;
-      border-color: rgb(190, 202, 214);
-      box-shadow: none;
-      color: #BDBDBD;
-      outline: none;
-
-    }
   }
 
-  .form-control:hover {
+  &.--invalid {
+    border-color: red;
+    // box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
+  }
+
+  &.--readonly{
+    transition: none;
+    border: 1px solid #becad6;
+    box-shadow: none;
+    cursor: default;
+    background: rgb(228, 230, 231);
     outline: none;
-    border-color: #8fa4b8;
-
-    &.--invalid {
-      border-color: red;
-      // box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
-    }
-
-    &.--readonly {
-      border-color: #a5a5a5;
-      color: #a5a5a5;
-      cursor: default;
-    }
   }
 }
 
