--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,3 +28,4 @@
 @import "./TextLink/textlink";
 @import "./HighlightedValue/highlightedValue";
 @import "./Badge/styles";
+@import "./Wrapper/wrapper";
