--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,3 +29,4 @@
 @import "./HighlightedValue/highlightedValue";
 @import "./Badge/styles";
 @import "./Wrapper/wrapper";
+@import "./RangePicker/rangepicker";
