feat: pagination initial commit

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,7 @@
 @import "./Input/input";
 @import "./LookupField/look_up";
 @import "./Modal/modal";
+@import "./Pagination/pagination";
 @import "./Pill/pill";
 @import "./Popover/popover";
 @import "./RadioButtons/radio_button";
