--- a/src/SmallCalendar/_small_callendar.scss
+++ b/src/SmallCalendar/_small_callendar.scss
@@ -1,14 +1,22 @@
+.range-calendar-container{
+  width: fit-content;
+  display: flex;
+  overflow-y: hidden;
+  overflow-x: auto;
+}
+
 .range-calendar{
   display: inline-block;
   margin: 0 .5rem 0 0;
 
   &.--next{
+    display: inline;
     margin: 0 0 0 0.5rem;
   }
 }
 
 .ui-kit__calendar-container{
-  width: 16rem;
+  width: 14rem;
   border-collapse: collapse;
 
   .calendar-header{
@@ -59,21 +67,11 @@
 
   }
 
-  .week-days-container{
-    display: grid;
-    width: 100%;
-    grid-template-columns: repeat(7, max-content);
-    grid-gap: 0.25rem;
-    //margin: 0.25rem 0;
-    justify-content: center;
-    border-collapse: collapse;
-  }
 
   .calendar-view{
     display: grid;
     grid-template-columns: repeat(7, max-content);
     grid-template-rows: repeat(6, max-content);
-    //grid-gap: 0.25rem;
     justify-content: center;
     border-collapse: collapse;
     box-sizing: border-box;
@@ -186,8 +184,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 2rem;
-  width: 2rem;
+  height: 1.75rem;
+  width: 1.75rem;
   border-radius: 50%;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   line-height: 1.5;
