--- a/src/Pagination/_pagination.scss
+++ b/src/Pagination/_pagination.scss
@@ -9,6 +9,7 @@
     text-align: center;
     border-color: rgba(206,206,206,1) !important;
     min-width: 60px;
+    transition: background-color 200ms;
 
     &:hover {
       background-color: rgba(206,206,206,0.2);
