--- a/src/Badge/styles.scss
+++ b/src/Badge/styles.scss
@@ -1,6 +1,8 @@
 .swf-badge-root {
+  width: fit-content;
   display: inline-flex;
   align-items: center;
+  justify-content: center;
 
   .swf-button {
     padding: 0 0 0 1rem;
