--- a/src/Alert/_alert.scss
+++ b/src/Alert/_alert.scss
@@ -49,6 +49,59 @@
   max-width: 100%;
   grid-template-columns: 24px 1fr max-content;
 
+  --taransformX: 0;
+  --taransformY: 0;
+
+  &.--fixed {
+    position: fixed;
+    z-index: 100;
+    animation-duration: 2s;
+    animation-name: slidein;
+    --start-animation: 0;
+    --end-animation: 0;
+
+    &.--vertical-top{
+      top: 1rem;
+      --start-animation: -0.5rem;
+      --end-animation: 1rem;
+    }
+
+
+    &.--vertical-center{
+      --taransformY: -50%;
+      top: 50%;
+      --start-animation: 40%;
+      --end-animation: 50%;
+    }
+    &.--vertical-bottom{
+      bottom: 1rem;
+      --start-animation:  calc(100% - 2rem);
+      --end-animation: calc(100% - 7rem);
+    }
+
+    @keyframes slidein {
+      from {
+        top: var(--start-animation);
+      }
+      to{
+        top: var(--end-animation)
+      }
+    }
+
+    &.--horizontal-start{
+      left: 1rem;
+    }
+    &.--horizontal-center{
+      left: 50%;
+      --taransformX: -50%;
+    }
+    &.--horizontal-end{
+      right: 1rem;
+    }
+
+    transform: translateX(var(--taransformX)) translateY(var(--taransformY));
+  }
+
   &.--no-icon{
     grid-template-columns: 1fr max-content;
   }
@@ -77,7 +130,7 @@
   }
 
   &.--expanded{
-    height: fit-content;
+    height: auto;
   }
 
   .alert-icon{
