CalendarMonth: remove Hummer

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,3 +31,4 @@
 @import "./Badge/styles";
 @import "./Wrapper/wrapper";
 @import "./RangePicker/rangepicker";
+@import "./AlertGroup/alert_group";
