--- a/src/Dropdown/_dropdown.scss
+++ b/src/Dropdown/_dropdown.scss
@@ -1,8 +1,14 @@
 .swf-dropdown-main-container{
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   display: inline-block;
-  width: 10rem;
 
+  &.dropdown-container{
+    width: 13rem;
+
+    &.--autoWidth{
+      width: 100%;
+    }
+  }
   --dropdown-padding: 0.5rem;
 
   .dropdown-label {
