Calendar: add disabled

--- a/src/SmallCalendar/_small_callendar.scss
+++ b/src/SmallCalendar/_small_callendar.scss
@@ -85,6 +85,24 @@
   position: relative;
   cursor: pointer;
 
+  &.--cursor-default{
+    cursor: default;
+  }
+
+  &.--disabled{
+    background: #e4e6e7;
+    color: rgba(0,0,0, 0.5);
+    cursor: default;
+
+    &.--start-disabled{
+      border-radius: 50% 0 0;
+    }
+
+    &.--end-disabled{
+      border-radius: 0 0 50% 0;
+    }
+  }
+
   .border-container{
     position: absolute;
     width: calc(100% - 2px);
@@ -128,6 +146,11 @@
         border-left: 1px dashed rgb(30, 133, 109);
       }
     }
+
+    &.--disabled{
+      border-top: 1px solid white;
+      border-bottom: 1px solid white;
+    }
   }
 
   &.--in-selected-period{
@@ -165,7 +188,7 @@
 }
 
 .calendar-day-container:hover{
-  .day-element{
+  .--can-hover.day-element{
     background: #ededed;
     color:  rgb(30, 133, 109);
 
@@ -189,7 +212,6 @@
   border-radius: 50%;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   line-height: 1.5;
-
 
   &.active{
     &.selected{
