fix: styles.  tr:hover -> background color

--- a/src/Table/Table.scss
+++ b/src/Table/Table.scss
@@ -36,7 +36,7 @@ tbody {
     cursor: pointer;
 
     &:hover {
-      background-color: var(--swf-light-gray);
+      background-color: #f5f5f5;
     }
   }
 }
