fix: styles Height for .pagination-dropdown

--- a/src/Table/Table.scss
+++ b/src/Table/Table.scss
@@ -93,10 +93,15 @@ tbody {
       padding: 0;
       height: 1.5rem;
       width: 1.5rem;
+      font-size: .7rem;
     }
   }
 
   .pagination-dropdown {
     width: fit-content;
+
+    .dropdown-button {
+      height: 1.5rem !important;
+    }
   }
 }
