--- a/src/Table/Table.scss
+++ b/src/Table/Table.scss
@@ -17,13 +17,13 @@
   border-color: #e9ecef;
   
   & > :not(:last-child) > :last-child > * {
-    border-bottom-color: var(--swf-light-gray);
+    border-bottom-color: #e9ecef;
   }
   
   & > :not(caption) > * > * {
     padding: 0.5rem 0.5rem;
     background-color: transparent;
-    border-bottom: 1px solid var(--swf-light-gray);
+    border-bottom: 1px solid #e9ecef;
   }
 }
 
@@ -44,7 +44,7 @@ tbody {
 .th {
   padding: 0.75rem 1.5rem;
   letter-spacing: 0;
-  border-bottom: 3px solid var(--swf-light-gray) !important;
+  border-bottom: 3px solid #e9ecef !important;
   white-space: nowrap;
   text-transform: uppercase;
   opacity: .7;
