feat: Loader component; Table loader

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,7 +33,4 @@
 @import "./RangePicker/rangepicker";
 @import "./AlertGroup/alert_group";
 @import "./Table/Table.scss";
-
-:root {
-    --swf-light-gray: #f5f5f5;
-}
+@import "./Loader/loader.scss";
