--- a/src/Table/Table.scss
+++ b/src/Table/Table.scss
@@ -2,12 +2,14 @@
   //overflow-x: auto;
   position: relative;
   -webkit-overflow-scrolling: touch;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
+  width: 100%;
+  height: 100%;
 
   .table-loader {
     display: flex;
@@ -16,7 +18,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgb(0, 0, 0, .20);
+    background-color: rgb(0, 0, 0, 0.2);
     z-index: 2;
   }
 }
@@ -27,11 +29,11 @@
   color: #67748e;
   vertical-align: top;
   border-color: #e9ecef;
-  
+
   & > :not(:last-child) > :last-child > * {
     border-bottom-color: #e9ecef;
   }
-  
+
   & > :not(caption) > * > * {
     padding: 0.5rem 0.5rem;
     background-color: transparent;
@@ -59,7 +61,7 @@ tbody {
   border-bottom: 3px solid #e9ecef !important;
   white-space: nowrap;
   text-transform: uppercase;
-  opacity: .7;
+  opacity: 0.7;
   font-weight: 700;
   font-size: 0.65rem;
   color: var(--swf-secondary);
@@ -73,20 +75,32 @@ tbody {
 
 .pagination-container {
   display: flex;
-  gap: .5rem;
+  gap: 0.5rem;
 
-  &.start { justify-content: flex-start }
-  &.center { justify-content: center}
-  &.end {justify-content: flex-end}
+  &.start {
+    justify-content: flex-start;
+  }
+  &.center {
+    justify-content: center;
+  }
+  &.end {
+    justify-content: flex-end;
+  }
 
   .pagination {
     display: flex;
     align-items: center;
-    gap: .3rem;
+    gap: 0.3rem;
 
-    &.start { justify-content: flex-start }
-    &.center { justify-content: center}
-    &.end {justify-content: flex-end}
+    &.start {
+      justify-content: flex-start;
+    }
+    &.center {
+      justify-content: center;
+    }
+    &.end {
+      justify-content: flex-end;
+    }
 
     .moreButton {
       background: transparent;
@@ -105,7 +119,7 @@ tbody {
       padding: 0;
       height: 1.5rem;
       width: 1.5rem;
-      font-size: .7rem;
+      font-size: 0.7rem;
     }
   }
 
