--- a/src/Table/Table.scss
+++ b/src/Table/Table.scss
@@ -18,7 +18,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgb(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.2);
     z-index: 2;
   }
 }
@@ -100,6 +100,10 @@ tbody {
     }
     &.end {
       justify-content: flex-end;
+    }
+
+    &.none {
+      display: none;
     }
 
     .moreButton {
