--- a/src/Table/Table.scss
+++ b/src/Table/Table.scss
@@ -71,6 +71,9 @@ tbody {
   vertical-align: middle;
   white-space: nowrap;
   text-align: center;
+  text-overflow: ellipsis;
+  max-width: 4rem;
+  overflow: hidden;
 }
 
 .pagination-container {
