--- a/src/Modal/_modal.scss
+++ b/src/Modal/_modal.scss
@@ -62,7 +62,7 @@
     position: relative;
     z-index: 4001;
     width: 70%;
-   // height: 85%;
+    height: 85%;
     padding: calc(1.5rem * var(--mv9-Tvprj--8tAf8z-1Jrjt, 1)) calc(1.5rem * var(--mv9-Tvprj--9Apz8-1Jrjt, 1));
     font-family: var(--mv9-Tvprj--Pvmz-PrTAjO, var(--now-font-family));
     font-style: normal;
