RangePicker: update opOpen handler

--- a/src/RangePicker/_rangepicker.scss
+++ b/src/RangePicker/_rangepicker.scss
@@ -34,6 +34,10 @@
       }
     }
 
+    .date-input-control:focus {
+      outline: none;
+    }
+
 
     .range-picker-element {
       display: flex;
