--- a/src/Form/_form.scss
+++ b/src/Form/_form.scss
@@ -1,7 +1,11 @@
 .form {
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+  Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji,
+  Segoe UI Symbol, Noto Color Emoji;
+
   &__title {
-    font-size: 24px;
-    margin: 0 42px;
+    font-size: 1.9rem;
+    margin-bottom: 2rem;
   }
 
   &__columns {
@@ -12,11 +16,15 @@
 
   &__title-header {
     font-weight: 700;
+    margin-right: 1rem;
+  }
+
+  &__title-value {
+
   }
 
   &__fields {
     display: grid;
-    margin: 20px 60px;
   }
 
   &__item {
@@ -24,9 +32,6 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-      Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji,
-      Segoe UI Symbol, Noto Color Emoji;
     padding: 5px 0;
     font-size: 1rem;
     
