--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,5 +33,5 @@
 @import "./RangePicker/rangepicker";
 @import "./AlertGroup/alert_group";
 @import "./Table/Table.scss";
-@import "./Loader/loader.scss";
+@import "./Loader/loader";
 @import "./Form/form";
