--- a/src/Card/_card.scss
+++ b/src/Card/_card.scss
@@ -15,6 +15,11 @@
     margin: 0;
   }
 
+  &.--sm{
+    max-width: 450px;
+    min-width: 450px;
+  }
+
   &.--s {
     max-width: 300px;
     min-width: 300px;
