--- a/src/Wrapper/_wrapper.scss
+++ b/src/Wrapper/_wrapper.scss
@@ -13,6 +13,8 @@
   }
 
   .wrapper-header {
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+    line-height: 1.5;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -32,6 +34,7 @@
 
     .title {
       font-size: 1.3rem;
+      margin: 0.5rem 0;
     }
 
     .link {
