Dropdown: fix width

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,4 +35,4 @@
 @import "./Table/Table.scss";
 @import "./Loader/loader";
 @import "./Progress/progress";
-//@import '~bootstrap-icons/font/bootstrap-icons';
+@import '~bootstrap-icons/font/bootstrap-icons.css';
