--- a/src/Modal/_modal.scss
+++ b/src/Modal/_modal.scss
@@ -85,7 +85,7 @@
     &.--grid {
       display: -ms-grid;
       display: grid;
-      grid-template-rows: 10rem 1fr 3rem;
+      grid-template-rows: auto 1fr 3rem;
     }
 
     &.--flex {
