feat(LookupField): new LookUpField

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@
 @import "./Dropdown/dropdown";
 @import "./HtmlEditor/html_editor";
 @import "./Input/input";
-@import "./LookupField/look_up";
+@import "./LookupField/styles/look_up";
 @import "./Modal/modal";
 @import "./Pagination/pagination";
 @import "./Pill/pill";
